--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ gen/
 
 # Local configuration file (sdk path, etc)
 local.properties
+.settings/
 
 # Eclipse project files
 .classpath
@@ -27,3 +28,6 @@ proguard/
 *.ipr
 *.iws
 .idea/
+
+# gedit temp files
+*.*~
